--- a/app/imports/ui/components/newComponents/Jumbotron.css
+++ b/app/imports/ui/components/newComponents/Jumbotron.css
@@ -5,6 +5,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 650px; 
+    /* min-width: 900px; */
     color:white;
 }
 
