--- a/imports/ui/components/newComponents/NavBar.css
+++ b/imports/ui/components/newComponents/NavBar.css
@@ -5,7 +5,7 @@
     color: #201f1f;
     font-size: 400%;
     font-family: 'Amatic SC', cursive;
-    
+
 }
 
 .nav-link{
@@ -14,6 +14,7 @@
     letter-spacing: 3px;
     /* font-family: 'Amatic SC', cursive; */
     font-family: 'Montserrat', sans-serif;
+    cursor: pointer;
 }
 
 .dropdown-menu{
@@ -21,12 +22,14 @@
     font-size: 70%;
     letter-spacing: 3px;
     font-family: 'Montserrat', sans-serif;
+    cursor: pointer;
 }
 
 a{
     color: #ece3e3;
+    cursor: pointer;
     font-size: 200%;
-    
+    cursor: pointer;
 }
 
 .navbar-custom {
